Apply log transformation to target and tune RandomForest
Switched the target variable to log(1 + Price) for model training and evaluation to improve regression performance. Increased RandomForestRegressor estimators from 200 to 500. Updated all relevant metrics and outputs to reflect the log-transformed target, resulting in improved R-squared and error metrics for all models.

--- a/Mini Project #2 — Laptop Price Prediction/Laptop_Price_Prediction.ipynb
+++ b/Mini Project #2 — Laptop Price Prediction/Laptop_Price_Prediction.ipynb
@@ -889,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 67,
    "id": "5c03e59e-1074-49ca-b7e7-70a7429a20dc",
    "metadata": {},
    "outputs": [
@@ -906,6 +906,8 @@
     "# define dataset into features(x) and target variable(y)\n",
     "x = df.drop('Price',axis=1)\n",
     "y = df['Price']\n",
+    "y_log = np.log1p(df['Price'])  # log(1 + Price)\n",
+    "\n",
     "\n",
     "print(\"x shape:\", x.shape)\n",
     "print(\"y shape:\", y.shape )"
@@ -913,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 68,
    "id": "e0b13be0-05f2-4283-bcc4-18db997c9a35",
    "metadata": {},
    "outputs": [
@@ -946,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 69,
    "id": "d51794c1-91e5-43b5-bdb6-87411ac8b61b",
    "metadata": {},
    "outputs": [],
@@ -954,12 +956,12 @@
     "\n",
     "\n",
     "# split dataset into traning set:80% and testing set: 20%\n",
-    "x_train, x_test, y_train, y_test = train_test_split(x,y,test_size=0.2,random_state=42)"
+    "x_train, x_test, y_train, y_test = train_test_split(x,y_log,test_size=0.2,random_state=42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 70,
    "id": "5cb6f5ea-4337-47b1-b3d6-f6354833e19e",
    "metadata": {},
    "outputs": [],
@@ -976,7 +978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 71,
    "id": "abf4bdb5-bcbb-4d9e-ba96-0b50c848778e",
    "metadata": {},
    "outputs": [],
@@ -991,7 +993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 72,
    "id": "4b54c7b9-bd58-4bfc-a8ff-9f063b91c49a",
    "metadata": {},
    "outputs": [
@@ -999,9 +1001,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Linear Regression R-squared: 0.8352849513989423\n",
-      "Linear Regression Mean Squared Error: 5955307419999.074\n",
-      "Linear Regression Root Mean Squared Error 2440349.8560655345\n"
+      "Linear Regression R-squared: 0.8634760265767921\n",
+      "Linear Regression Mean Squared Error: 0.05136193237139273\n",
+      "Linear Regression Root Mean Squared Error 0.22663171086896186\n"
      ]
     }
    ],
@@ -1017,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 73,
    "id": "5da5dd1e-fd8b-4f80-86ea-23c09bac7117",
    "metadata": {},
    "outputs": [
@@ -1025,8 +1027,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training Accuracy: 0.9383\n",
-      "Test Accuracy:     0.8353\n",
+      "Training Accuracy: 0.9406\n",
+      "Test Accuracy:     0.8635\n",
       "⚠️ Possible Overfitting detected (train >> test).\n"
      ]
     }
@@ -1047,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 74,
    "id": "5219b4a9-04b2-4152-b6cb-48530af888bd",
    "metadata": {},
    "outputs": [],
@@ -1063,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 75,
    "id": "50eab4e7-683f-4291-8d75-d711af4493b5",
    "metadata": {},
    "outputs": [
@@ -1071,9 +1073,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Decison Tree Regressor R-squared: 0.766095343289644\n",
-      "Decison Tree Regressor Squared Error: 8456872335042.824\n",
-      "Decison Tree Regressor Root Mean Squared Error 2908070.208066309\n"
+      "Decison Tree Regressor R-squared: 0.7930977617168596\n",
+      "Decison Tree Regressor Squared Error: 0.0778390674086692\n",
+      "Decison Tree Regressor Root Mean Squared Error 0.27899653655317874\n"
      ]
     }
    ],
@@ -1089,7 +1091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 76,
    "id": "e12f2767-11d2-4f9a-b776-da5b8ef27832",
    "metadata": {},
    "outputs": [
@@ -1098,7 +1100,7 @@
      "output_type": "stream",
      "text": [
       "Training Accuracy: 0.9996\n",
-      "Test Accuracy:     0.7661\n",
+      "Test Accuracy:     0.7931\n",
       "⚠️ Possible Overfitting detected (train >> test).\n"
      ]
     }
@@ -1119,14 +1121,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 77,
    "id": "76bfdd88-1aa6-4488-86ac-c394b2cc7ace",
    "metadata": {},
    "outputs": [],
    "source": [
     "# now try with RandomForestRegressor Algorithm\n",
     "model_rf = Pipeline(steps=[('preprocessor', preprocessor),\n",
-    "                           ('regressor', RandomForestRegressor(n_estimators=200,random_state=42))])\n",
+    "                           ('regressor', RandomForestRegressor(n_estimators=500,random_state=42))])\n",
     "\n",
     "model_rf.fit(x_train, y_train)\n",
     "\n",
@@ -1135,7 +1137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 80,
    "id": "bb64e2b4-db23-4e86-9343-ac55926f6506",
    "metadata": {},
    "outputs": [
@@ -1143,9 +1145,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Random Forest Regressor R-squared: 0.8318753075082388\n",
-      "Random Forest Regressor Squared Error: 6078583816019.459\n",
-      "Random Forest Regressor Root Mean Squared Error 2465478.415241038\n"
+      "Random Forest Regressor R-squared: 0.8755733309068386\n",
+      "Random Forest Regressor Squared Error: 0.04681078350503265\n",
+      "Random Forest Regressor Root Mean Squared Error 0.2163579984771366\n"
      ]
     }
    ],
@@ -1161,7 +1163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 81,
    "id": "4130a6db-81c4-42cb-8918-1a5199466317",
    "metadata": {},
    "outputs": [
@@ -1169,8 +1171,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training Accuracy: 0.9701\n",
-      "Test Accuracy:     0.8297\n",
+      "Training Accuracy: 0.9821\n",
+      "Test Accuracy:     0.8756\n",
       "⚠️ Possible Overfitting detected (train >> test).\n"
      ]
     }
@@ -1191,7 +1193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 82,
    "id": "cae5af5a-3a81-4c84-97bd-d6d63df44565",
    "metadata": {},
    "outputs": [
